[#8260] avoid style bleed onto a button; update SimpleMDE->EasyMDE terms

--- a/Allura/allura/nf/allura/css/site_style.css
+++ b/Allura/allura/nf/allura/css/site_style.css
@@ -163,10 +163,6 @@ html {
   -webkit-font-smoothing: antialiased;
 }
 
-.link {
-  color: #0077aa;
-}
-
 ul {
   margin-left: 30px;
   margin-bottom: 1em;
